@@ -5,6 +5,7 @@ Revision history for Net-Silverpeak-Orchestrator
       NET_SILVERPEAK_ORCHESTRATOR_POLICY environment variable
     - skip appliance tests if Orchestrator has none assigned
     - add create_templategroup method
+    - add update_templates_of_templategroup method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
